--- a/views/account_asset.xml
+++ b/views/account_asset.xml
@@ -1,6 +1,6 @@
 <odoo>
   <data>
- <record id="account_asset_inherit_view" model="ir.ui.view">
+    <record id="account_asset_inherit_view" model="ir.ui.view">
         <field name="name">account.asset.product.form.inherit</field>
         <field name="model">account.asset</field>
         <field name="inherit_id" ref="account_asset.view_account_asset_form"/>
@@ -23,8 +23,23 @@
                 <field name="partner_id"/>
                 <field name="note"/>
             </xpath>
+            <xpath expr="//field[@name='book_value']" position="after">            
+                <field name="real_value"/>
+            </xpath>
+
+            
            
         </field>
+    </record>
+    <record id="account_assets_list_inherit" model="ir.ui.view">
+            <field name="name">account.asset.inherit.list</field>
+            <field name="model">account.asset</field>
+            <field name="inherit_id" ref="account_asset.view_account_asset_purchase_tree"/>
+            <field name="arch" type="xml">               
+                <xpath expr="//field[@name='value_residual']" position="before">
+                    <field name="real_value" optional="show"/>
+                </xpath>                
+            </field>
     </record>
   </data>
 </odoo>
