--- a/views/maintenance_equipment.xml
+++ b/views/maintenance_equipment.xml
@@ -35,8 +35,8 @@
             <field name="model">maintenance.equipment</field>
             <field name="inherit_id" ref="maintenance.hr_equipment_view_search"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='name']" position="after">                   
-                   <field name="x_studio_nombre_del_activo"/>
+                <xpath expr="//field[@name='name']" position="before">                   
+                   <field string="Nombre del activo" name="x_studio_nombre_del_activo"/>
                 </xpath>
             </field>
         </record>
