--- a/views/account_asset.xml
+++ b/views/account_asset.xml
@@ -36,7 +36,7 @@
     <field name="model">account.asset</field>
     <field name="inherit_id" ref="account_asset.view_account_asset_search"/>
     <field name="arch" type="xml">
-      <xpath expr="//search" position="inside">        
+      <xpath expr="//field[@name='name']" position="before">       
           <field string="Nombre" name="x_studio_nombre"/>
       </xpath>
     </field>
