--- a/views/account_asset.xml
+++ b/views/account_asset.xml
@@ -31,12 +31,13 @@
            
         </field>
     </record>
+
     <record model="ir.ui.view" id="account_assets_search_form_inherit">
     <field name="name">account.assets.search.form.inherit</field>
     <field name="model">account.asset</field>
     <field name="inherit_id" ref="account_asset.view_account_asset_search"/>
     <field name="arch" type="xml">
-      <xpath expr="//field[@name='name']" position="before">       
+       <xpath expr="//field[@name='name']" position="before">
           <field string="Nombre" name="x_studio_nombre"/>
       </xpath>
     </field>
@@ -50,6 +51,60 @@
                     <field name="real_value" optional="show"/>
                 </xpath>                
             </field>
+    </record>
+    <record id="account_asset_pivot_view" model="ir.ui.view">
+   <field name="name">account.asset.pivot</field>
+   <field name="model">account.asset</field>
+   <field name="arch" type="xml">
+       <pivot string="Contacto">
+           <!-- <field name="pages_count" type="measure"/>
+           <field name="is_classic" type="row"/>
+           <field name="author" type="col"/> -->
+       </pivot>
+
+   </field>
+
+  </record>
+   <record model="ir.actions.act_window" id="account_asset.action_account_asset_model_form">
+        <field name="name">Asset Models</field>
+        <field name="res_model">account.asset</field>
+        <field name="view_mode">tree,pivot,kanban,form</field>
+        <field name="view_ids" eval="[(5, 0, 0),
+            (0, 0, {'view_mode': 'tree', 'view_id': ref('account_asset.view_account_asset_model_purchase_tree')}),
+            (0, 0, {'view_mode': 'kanban'}),
+            (0, 0, {'view_mode': 'form', 'view_id': ref('account_asset.view_account_asset_form')}),
+            (0, 0, {'view_mode': 'pivot'}),]"/>
+        <field name="search_view_id" ref="account_asset.view_account_asset_model_search"/>
+        <field name="domain">[('asset_type', '=', 'purchase'), ('state', '=', 'model')]</field>
+        <field name="context">{'asset_type': 'purchase', 'default_asset_type': 'purchase', 'default_state': 'model'}</field>
+    </record>
+    <record model="ir.actions.act_window" id="account_asset.action_account_asset_form">
+        <field name="name">Assets</field>
+        <field name="res_model">account.asset</field>
+        <field name="view_ids" eval="[(5, 0, 0),
+            (0, 0, {'view_mode': 'tree', 'view_id': ref('account_asset.view_account_asset_purchase_tree')}),
+            (0, 0, {'view_mode': 'kanban'}),
+            (0, 0, {'view_mode': 'form', 'view_id': ref('account_asset.view_account_asset_form')}),
+            (0, 0, {'view_mode': 'pivot'}),]"/>
+        <field name="domain">[('asset_type', '=', 'purchase'), ('state', '!=', 'model'), ('parent_id', '=', False)]</field>
+        <field name="context">{'asset_type': 'purchase', 'default_asset_type': 'purchase'}</field>
+    </record>
+
+    <record model="ir.ui.view" id="account_asset.view_account_asset_purchase_tree">
+        <field name="name">account.asset.purchase.tree</field>
+        <field name="model">account.asset</field>
+        <field name="arch" type="xml">
+            <tree string="Assets" decoration-info="(state == 'draft')" decoration-muted="(state == 'close')" decoration-warning="(state == 'close' and value_residual != 0)">
+                <field name="name" optional="show"/>
+                <field name="first_depreciation_date" optional="show"/>
+                <field name="book_value" optional="show"/>
+                <field name="value_residual" optional="show" widget="monetary"/>
+                <field name="currency_id" optional="show" groups="base.group_multi_currency"/>
+                <field name="company_id" optional="show" groups="base.group_multi_company"/>
+                <field name="state" optional="show"/>
+                <field name="activity_exception_decoration" optional="show" widget="activity_exception"/>
+            </tree>
+        </field>
     </record>
   </data>
 </odoo>
